# SoundSiren

./: .gitignore  DESIGN.md  DESIGN_CN.md  DESIGN_EN.md  README.md  README_CN.md  ROADMAP.md  pyproject.toml
scripts/: bootstrap.sh  request_demo.sh  run_demo.sh  seed_vc_convert.sh
src/soundsiren/: __init__.py  cli.py  config.py  storage.py
src/soundsiren.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/soundsiren/api/: app.py
src/soundsiren/core/: audio_utils.py  downloader.py  mix.py  pipeline.py  separation.py  tasks.py  voice_conversion.py
web/: app.js  index.html  styles.css
