[project]
name = "soundsiren"
version = "0.1.0"
description = "Zero-shot neural vocal morphing: speech-to-singing synthesis with LLM orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "python-multipart>=0.0.9",
]

[project.scripts]
soundsiren = "soundsiren.cli:app"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
